[tool.poetry]
name = "support_bot"
version = "0.1.0"
description = ""
authors = ["pyg4ng <pyg4ng@pyg4ng.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.18.0"
pydantic-settings = "^2.8.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.9"
mypy = "^1.15.0"
isort = "^6.0.1"

[tool.ruff]
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
